--- a/applications/ws/local/client/yathra/contact.html
+++ b/applications/ws/local/client/yathra/contact.html
@@ -12,6 +12,7 @@
       <link href="css/freelancer.css" rel="stylesheet">
       <!-- Custom Fonts -->
       <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link href="css/tab.css" rel="stylesheet">
       <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
       <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,7 +25,7 @@
       <style type="text/css"></style>
       <style type="text/css"></style>
    </head>
-   <body id="page-top" class="index">
+   <body id="page-top" class="index" >
       <!-- Navigation -->
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container">
@@ -42,10 +43,10 @@
             <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
                <ul class="nav navbar-nav navbar-left">
                   <li class="page-scroll">
-                     <a href="#home">HOME</a>
+                     <a href="index.html">HOME</a>
                   </li>
                   <li class="page-scroll">
-                     <a href="#signup">SIGN UP/SIGN IN</a>
+                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
                   </li>
                   <li class="page-scroll">
                      <a href="#offers">OFFERS FOR YOU</a>
@@ -56,7 +57,7 @@
                      <a href="#page-top"></a>
                   </li>
                   <li class="page-scroll">
-                     <a href="#about">About</a>
+                     <a href="about.html">About</a>
                   </li>
                   <li class="page-scroll">
                      <a href="#contact">Contact</a>
@@ -67,60 +68,78 @@
          </div>
          <!-- /.container-fluid -->
       </nav>
-      <!-- Header -->
-      <header class=".tab-header">
-         <div class="container ">
-		 <div class="col-sm-12">
-		    <h3>Car Details</h3>
-		 </div>
-	</div>
-      </header>
-      <div class="container ">
-         <div class="col-sm-12 text-center ">
-            <!--  ACTUAL BODY OF THE WEBSITE -->
-            <!--  ACTUAL BODY OF THE WEBSITE -->
-            <div class="panel panel-white" id="row1">
-               <div class="panel-body text-center">
-                  <div class="row col-sm-12 ">
-                     <div class="col-sm-4"></div>
-		     <div class="col-sm-4">
-                        <div href="#portfolioModal1 col-sm-6" class="" data-toggle="modal">
-                           <img src="" class="img-responsive carimage" id="1" alt="">
+      <!-- Contact Section -->
+      <section id="contact" >
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-12 text-center">
+                  <h2>Contact US</h2>
+                  <br/>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-lg-8 col-lg-offset-2">
+                  <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                  <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                  <form name="sentMessage" id="contactForm" novalidate="" class="error">
+                     <div class="row control-group error">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                           <label>Name</label>
+                           <input type="text" class="form-control" placeholder="Name" id="name" required="" data-validation-required-message="Please enter your name." aria-invalid="true">
+                           <p class="help-block text-danger">
+                           <ul class="alert" role="alert">
+                              <li>Please enter your name.</li>
+                           </ul>
+                           </p>
                         </div>
-                        <div class="title text-primary col-sm-6">Maruti Suzuki Swift</div>
                      </div>
-                  </div>
-                  <div class="row col-sm-12">
-                     <table class="table text-left">
-                        <tbody>
-                           <tr>
-                              <td>PickUp From:</td>
-                              <td>Bangalore</td>
-                           </tr>
-                           <tr>
-                              <td>Car Choosen:</td>
-                              <td>Indica</td>
-                           </tr>
-                           <tr>
-                              <td>Distance Allowed Per Day:</td>
-                              <td>300</td>
-                           </tr>
-                           <tr>
-                              <td>Minimum Fare:</td>
-                              <td>3000</td>
-                           </tr>
-                        </tbody>
-                     </table>
-                  </div>
-		  <div class="row col-sm-12 ">
-			<button id="search_car" type="button" class="btn btn-info active ">Book This Car</button>
-		  </div>
+                     <div class="row control-group error">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                           <label>Email Address</label>
+                           <input type="email" class="form-control" placeholder="Email Address" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+                           <p class="help-block text-danger">
+                           <ul class="alert" role="alert">
+                              <li>Please enter your email address.</li>
+                           </ul>
+                           </p>
+                        </div>
+                     </div>
+                     <div class="row control-group error">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                           <label>Phone Number</label>
+                           <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required="" data-validation-required-message="Please enter your phone number." aria-invalid="true">
+                           <p class="help-block text-danger">
+                           <ul class="alert" role="alert">
+                              <li>Please enter your phone number.</li>
+                           </ul>
+                           </p>
+                        </div>
+                     </div>
+                     <div class="row control-group error">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                           <label>Message</label>
+                           <textarea rows="3" class="form-control" placeholder="Message" id="message" required="" data-validation-required-message="Please enter a message." aria-invalid="true"></textarea>
+                           <p class="help-block text-danger">
+                           <ul class="alert" role="alert">
+                              <li>Please enter a message.</li>
+                           </ul>
+                           </p>
+                        </div>
+                     </div>
+                     <br>
+                     <div id="success"></div>
+                     <div class="row">
+                        <div class="form-group col-xs-12">
+                           <button type="submit" class="btn btn-success btn-lg">Send</button>
+                        </div>
+                     </div>
+                  </form>
                </div>
             </div>
          </div>
-      </div>
+      </section>
       <!-- Footer -->
-      <footer class="text-center">
+      <footer class="text-center websiteView">
          <div class="footer-above">
             <div class="container">
                <div class="row">
@@ -132,7 +151,7 @@
                      <h3>Around the Web</h3>
                      <ul style="list-style-type: none;">
                         <li style="display: inline; margin: 10px; margin-left: 0px;">
-                           <a class="grey-text text-lighten-3" href="http://fb.com/Take-a-Break-1665233680396027">
+                           <a class="grey-text text-lighten-3" href="http://fb.com/peersome">
                            <img style="height: 2.5rem; width: 2.5rem;"
                               src="http://i.imgur.com/84qlKB1.png" alt="facebook">
                            </a>
@@ -196,6 +215,15 @@
       <script src="js/freelancer.js"></script>
       <!-- MY JS -->
       <script src="js/jquery-ui.js"></script>
-      <script src="js/orderDetails.js"> </script>
+      <script src="js/index.js"> </script>
+      <script type="text/javascript"> 
+         var width = $(window).width();
+              if (width >= 850) {
+                  $('.websiteView').show();
+              } else {
+                  $('.websiteView').hide();
+              }
+         
+      </script>
    </body>
 </html>
