--- a/applications/ws/local/client/yathra/carDetails.html
+++ b/applications/ws/local/client/yathra/carDetails.html
@@ -6,75 +6,29 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Custom CSS -->
       <link href="css/freelancer.css" rel="stylesheet">
-      <!-- Custom Fonts -->
       <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
       <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
    </head>
    <body id="page-top" class="index">
-      <!-- Navigation -->
-      <!--<nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container">
-            <div class="navbar-header page-scroll">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#page-top">TAB</a>
-            </div>
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
-               <ul class="nav navbar-nav navbar-left">
-                  <li class="page-scroll">
-                     <a href="index.html">HOME</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#offers">OFFERS FOR YOU</a>
-                  </li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden active">
-                     <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="about.html">About</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="contact.html">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </nav>-->
       <!-- Header -->
-      <header class=".tab-header navbar-fixed-top">
+      <header class=".tab-header navbar-fixed-top mobileView">
          <div class="container ">
 		 <div class="col-sm-12">
-		    <h3>Car Details</h3>
+		    <h3>Select Car</h3>
+		 </div>
+	</div>
+      </header>
+      <header class=".tab-header navbar-fixed-top websiteView">
+         <div class="container ">
+		 <div class="col-sm-12">
+		    <h3>Select Car</h3>
 		 </div>
 	</div>
       </header>
       <div class="container "><br/><br/>
          <div class="col-sm-12 text-center ">
-            <!--  ACTUAL BODY OF THE WEBSITE -->
-            <!--  ACTUAL BODY OF THE WEBSITE -->
             <div class="panel panel-white" id="row1">
                <div class="panel-body text-center">
                   <div class="row col-sm-12 ">
@@ -88,50 +42,60 @@
 		     <div class="col-sm-4"></div>
                   </div>
                   <div class="row col-sm-12">
-		     <div class="col-sm-2"></div>
-		     <div class="col-sm-8"><br/>
-		             <table class="table text-left">
+		     <div class="col-sm-12"><br/>
+		             <table class="table text-left table-hover">
+				<thead >
+					<tr class="success">
+					<th>Agency</th>
+					<th>Fuel</th>
+					<th>Model</th>
+					</tr>
+				</thead>
 		                <tbody>
 		                   <tr>
-		                      <td>Car Choosen:</td>
-		                      <td>Indica</td>
+		                      <td>Agency1</td>
+		                      <td>Petrol</td>
+				      <td>2011</td>
 		                   </tr>
 		                   <tr>
-		                      <td>Fuel Type:</td>
-		                      <td>Deisel</td>
+		                      <td>Agency2</td>
+		                      <td>Diesel</td>
+				      <td>2010</td>
 		                   </tr>
 		                   <tr>
-		                      <td>PickUp From:</td>
-		                      <td>Bangalore</td>
+		                      <td>Agency3</td>
+		                      <td>Diesel</td>
+				      <td>2013</td>
 		                   </tr>
 		                   <tr>
-		                      <td>Travelling To:</td>
-		                      <td>Mangalore	</td>
+		                      <td>Agency4</td>
+		                      <td>Diesel</td>
+				      <td>2010</td>
 		                   </tr>
 		                   <tr>
-		                      <td>Distance Allowed/Day:</td>
-		                      <td>300</td>
+		                      <td>Agency5</td>
+		                      <td>Petrol</td>
+				      <td>2010</td>
 		                   </tr>
 		                   <tr>
-		                      <td>Minimum Fare/Day:</td>
-		                      <td>3000 rs</td>
+		                      <td>Agency6</td>
+		                      <td>Petrol</td>
+				      <td>2016</td>
 		                   </tr>
 				   <tr>
-		                      <td>Driver Bata Charges/Day:</td>
-		                      <td>300 rs</td>
+		                      <td>Agency7</td>
+		                      <td>Diesel</td>
+				      <td>2010</td>
 		                   </tr>
 				   <tr>
-		                      <td>Coupons Applied:</td>
-		                      <td>none</td>
+		                      <td>Agency8</td>
+		                      <td>Diesel</td>
+				      <td>2013</td>
 		                   </tr>
 		                </tbody>
 		             </table>
 			</div>
-			<div class="col-sm-2"></div>
                   </div>
-		  <div class="row col-sm-12 ">
-			<button id="search_car" type="button" class="btn btn-info active bookCarButton">Book Car</button>
-		  </div>
                </div>
             </div>
          </div>
@@ -222,8 +186,8 @@ var width = $(window).width();
          $('.websiteView').hide();
      }
 $(document).ready(function() {
-         		$('.bookCarButton').click(function() {
-         			window.location.href = "confirmBooking.html";
+         		$('tr').click(function() {
+         			window.location.href = "orderDetails.html";
          		});
          	});
 
