--- a/applications/ws/local/client/yathra/cars.html
+++ b/applications/ws/local/client/yathra/cars.html
@@ -6,65 +6,12 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+
       <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Custom CSS -->
       <link href="css/freelancer.css" rel="stylesheet">
       <link href="css/tab.css" rel="stylesheet">
-      <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
    </head>
    <body id="page-top" class="index">
-      <!-- Navigation -->
-      <!--<nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container">
-            <div class="navbar-header page-scroll">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#page-top">TAB</a>
-            </div>
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
-               <ul class="nav navbar-nav navbar-left">
-                  <li class="page-scroll">
-                     <a href="index.html">HOME</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#offers">OFFERS FOR YOU</a>
-                  </li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden active">
-                     <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="about.html">About</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="contact.html">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </nav>-->
-	
 	<header class=".tab-header navbar-fixed-top">
          <div class="container ">
 		 <div class="col-sm-12">
@@ -74,11 +21,9 @@
       </header><br/><br/>
       <div class="container " >
          <div class="row content">
-            <div class="col-sm-2 ">
-               <!--  SIDE NAV AS OF NOW EMPTY -->
-            </div><br/><br/>
-            <div class="col-sm-8 text-left " >
+            <div class="col-sm-12 text-left " >
                <!--  ACTUAL BODY OF THE WEBSITE -->
+		<div class="websiteView"><br/><br/></div><br/><br/>
                <div class="panel panel-default " id="row1">
                   <div class="panel-heading panel-info text-center col-sm-12" >
 			<div class="btn-group btn-group-justified">
@@ -316,7 +261,7 @@
             </div>
          </div>
       </div>
-      <footer class="text-center websiteView">
+      <footer class="text-center website hide">
          <div class="footer-above">
             <div class="container">
                <div class="row">
@@ -393,14 +338,5 @@
       <!-- MY JS -->
       <script src="js/jquery-ui.js"></script>
       <script src="js/cars.js"> </script>
-<script type="text/javascript"> 
-var width = $(window).width();
-     if (width >= 850) {
-         $('.websiteView').show();
-     } else {
-         $('.websiteView').hide();
-     }
-
-</script>
    </body>
 </html>
