--- a/applications/ws/local/client/yathra/orderDetails.html
+++ b/applications/ws/local/client/yathra/orderDetails.html
@@ -25,57 +25,14 @@
       <style type="text/css"></style>
    </head>
    <body id="page-top" class="index">
-      <!-- Navigation -->
-      <nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#page-top">TAB</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
-               <ul class="nav navbar-nav navbar-left">
-                  <li class="page-scroll">
-                     <a href="index.html">HOME</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#offers">OFFERS FOR YOU</a>
-                  </li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden active">
-                     <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="about.html">About</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="contact.html">Contact</a>
-                  </li>
-               </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-         </div>
-         <!-- /.container-fluid -->
-      </nav>
-      <!-- Header -->
-      <header class=".tab-header">
+      <header class=".tab-header navbar-fixed-top">
          <div class="container ">
-            <div class="col-sm-12">
-               <h3>Car Details</h3>
-            </div>
-         </div>
+		 <div class="col-sm-12">
+		    <h3>Car Details</h3>
+		 </div>
+	</div>
       </header>
-      <div class="container ">
+      <div class="container "><br/><br/>
          <div class="col-sm-12 text-center ">
             <!--  ACTUAL BODY OF THE WEBSITE -->
             <!--  ACTUAL BODY OF THE WEBSITE -->
@@ -83,60 +40,59 @@
                <div class="panel-body text-center">
                   <div class="row col-sm-12 ">
                      <div class="col-sm-4"></div>
-                     <div class="col-sm-4">
+		     <div class="col-sm-4">
                         <div href="#portfolioModal1 col-md-6" class="" data-toggle="modal">
                            <img src="" class="img-responsive carimage" id="1" alt="">
                         </div>
                         <div class="title text-primary col-sm-6 carname"></div>
                      </div>
-                     <div class="col-sm-4"></div>
+		     <div class="col-sm-4"></div>
                   </div>
                   <div class="row col-sm-12">
-                     <div class="col-sm-2"></div>
-                     <div class="col-sm-8">
-                        <br/>
-                        <table class="table text-left">
-                           <tbody>
-                              <tr>
-                                 <td>Car Choosen:</td>
-                                 <td>Indica</td>
-                              </tr>
-                              <tr>
-                                 <td>Fuel Type:</td>
-                                 <td>Deisel</td>
-                              </tr>
-                              <tr>
-                                 <td>PickUp From:</td>
-                                 <td>Bangalore</td>
-                              </tr>
-                              <tr>
-                                 <td>Travelling To:</td>
-                                 <td>Mangalore	</td>
-                              </tr>
-                              <tr>
-                                 <td>Distance Allowed/Day:</td>
-                                 <td>300</td>
-                              </tr>
-                              <tr>
-                                 <td>Minimum Fare/Day:</td>
-                                 <td>3000 rs</td>
-                              </tr>
-                              <tr>
-                                 <td>Driver Bata Charges/Day:</td>
-                                 <td>300 rs</td>
-                              </tr>
-                              <tr>
-                                 <td>Coupons Applied:</td>
-                                 <td>none</td>
-                              </tr>
-                           </tbody>
-                        </table>
-                     </div>
-                     <div class="col-sm-2"></div>
+		     <div class="col-sm-2"></div>
+		     <div class="col-sm-8"><br/>
+		             <table class="table text-left">
+		                <tbody>
+		                   <tr>
+		                      <td>Car Choosen:</td>
+		                      <td>Indica</td>
+		                   </tr>
+		                   <tr>
+		                      <td>Fuel Type:</td>
+		                      <td>Deisel</td>
+		                   </tr>
+		                   <tr>
+		                      <td>PickUp From:</td>
+		                      <td>Bangalore</td>
+		                   </tr>
+		                   <tr>
+		                      <td>Travelling To:</td>
+		                      <td>Mangalore	</td>
+		                   </tr>
+		                   <tr>
+		                      <td>Distance Allowed/Day:</td>
+		                      <td>300</td>
+		                   </tr>
+		                   <tr>
+		                      <td>Minimum Fare/Day:</td>
+		                      <td>3000 rs</td>
+		                   </tr>
+				   <tr>
+		                      <td>Driver Bata Charges/Day:</td>
+		                      <td>300 rs</td>
+		                   </tr>
+				   <tr>
+		                      <td>Coupons Applied:</td>
+		                      <td>none</td>
+		                   </tr>
+		                </tbody>
+		             </table>
+			</div>
+			<div class="col-sm-2"></div>
                   </div>
-                  <div class="row col-sm-12 ">
-                     <button id="search_car" type="button" class="btn btn-info active bookCarButton">Book Car</button>
-                  </div>
+		  <div class="row col-sm-12 ">
+			<button id="search_car" type="button" class="btn btn-info active bookCarButton">Book Car</button>
+		  </div>
                </div>
             </div>
          </div>
@@ -219,19 +175,19 @@
       <!-- MY JS -->
       <script src="js/jquery-ui.js"></script>
       <script src="js/orderDetails.js"> </script>
-      <script type="text/javascript"> 
-         var width = $(window).width();
-              if (width >= 850) {
-                  $('.websiteView').show();
-              } else {
-                  $('.websiteView').hide();
-              }
-         $(document).ready(function() {
-                  		$('.bookCarButton').click(function() {
-                  			window.location.href = "confirmBooking.html";
-                  		});
-                  	});
-         
-      </script>
+<script type="text/javascript"> 
+var width = $(window).width();
+     if (width >= 850) {
+         $('.websiteView').show();
+     } else {
+         $('.websiteView').hide();
+     }
+$(document).ready(function() {
+         		$('.bookCarButton').click(function() {
+         			window.location.href = "confirmBooking.html";
+         		});
+         	});
+
+</script>
    </body>
 </html>
