--- a/applications/ws/local/client/yathra/rentCars/confirmBooking.html
+++ b/applications/ws/local/client/yathra/rentCars/confirmBooking.html
@@ -55,11 +55,11 @@
                      <div class="row control-group error">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                            <label>Email Address</label>
-                           <input type="email" class="form-control" placeholder="Email Address" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
-                           <p class="help-block text-danger">
+                           <input type="email" class="form-control" placeholder="Email Address (optional)" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+                           <!--<p class="help-block text-danger">
                            <ul class="alert" role="alert">
                               <li>Please enter your email address.</li>
-                           </ul>
+                           </ul>-->
                            </p>
                         </div>
                      </div>
@@ -77,8 +77,8 @@
                      <br>
                      <div id="success"></div>
                      <div class="row">
-                        <div class="form-group col-xs-12">
-                           <button type="submit" class="btn btn-success btn-lg btn-block">Confirm Booking</button>
+                        <div class="form-group col-xs-12"><br/><br/>
+                           <button type="button" class="bookCar btn btn-success btn-lg btn-block ">Confirm Booking</button>
                         </div>
                      </div>
                   </form>
@@ -142,18 +142,10 @@
             </div>
          </div>
       </footer>
-      <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-      <div class="scroll-top page-scroll visible-xs visible-sm">
-         <a class="btn btn-primary" href="#page-top">
-         <span class="glyphicon glyphicon-chevron-up">
-         </a>
-      </div>
+      <script src="../js/general/httputil.js"></script>
       <script src="../js/general/jquery.js"></script>
       <script src="../js/general/bootstrap.min.js"></script>
       <script src="../js/general/jquery.easing.min.js"></script>
-      <script src="../js/general/classie.js"></script>
-      <script src="../js/general/cbpAnimatedHeader.js"></script>
-      <script src="../js/general/contact_me.js"></script>
       <script src="../js/general/freelancer.js"></script>
       <script src="../js/rentCars/confirm.js"></script>
       <script src="../js/general/bootstrap.min.js"></script>
