--- a/applications/ws/local/client/yathra/rentCars/carDetails.html
+++ b/applications/ws/local/client/yathra/rentCars/carDetails.html
@@ -43,10 +43,10 @@
                </div>
                <div class="row col-sm-2"></div>
                <div class="row col-sm-6">
-                  <div class="car-list col-sm-12">
+                  <div class="car-list col-sm-12 carDetailsDiv">
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="Arun Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">Arun Travels</h5>
                               <div>3+1 Seats</div>
@@ -59,8 +59,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="MK Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">MK Travels</h5>
                               <div>3+1 Seats</div>
@@ -73,8 +73,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="Ravi Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">Ravi Travels</h5>
                               <div>3+1 Seats</div>
@@ -87,8 +87,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="RSR Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">RSR Travels</h5>
                               <div>3+1 Seats</div>
@@ -101,8 +101,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="VR Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">VR Travels</h5>
                               <div>3+1 Seats</div>
@@ -115,8 +115,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="Vinayaka Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">Vinayaka Travels</h5>
                               <div>3+1 Seats</div>
@@ -129,8 +129,8 @@
                         </div>
                      </div>
                      <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
+                     <div class="car-list-item row container" id="Madhu Travels">
+                        <div class="list-group col-xs-12">
                            <div class="col-xs-6">
                               <h5 class="text-success">Madhu Travels</h5>
                               <div>3+1 Seats</div>
@@ -240,6 +240,7 @@
          </a>
       </div>
       <script src="../js/general/jquery.js"></script>
+      <script src="../js/general/httputil.js"></script>
       <script src="../js/general/bootstrap.min.js"></script>
       <script src="../js/general/jquery.easing.min.js"></script>
       <script src="../js/general/classie.js"></script>
