--- a/applications/ws/local/client/yathra/rentCars/carDetails.html
+++ b/applications/ws/local/client/yathra/rentCars/carDetails.html
@@ -20,7 +20,9 @@
                <h3><i class="glyphicon glyphicon-arrow-left text-primary"></i></h3>
             </div>
             <div class="col-xs-8">
-               <h4><div class="title col-sm-6 carname"></div></h4>
+               <h4>
+                  <div class="title col-sm-6 carname"></div>
+               </h4>
             </div>
          </div>
       </header>
@@ -30,14 +32,15 @@
                <h3>Select Car</h3>
             </div>
          </div>
-      </header>
+      </header><div class="container">
       <section>
          <div class="panel panel-white" id="row1">
             <div class="panel-body text-center">
                <div class="row col-sm-3 ">
                   <div class="col-sm-12">
                      <div href="#portfolioModal1 col-md-6" class="" data-toggle="modal">
-                        <br/><center><img src="" class="img-responsive carimage" id="1" alt=""></center>
+                        <br/>
+                        <center><img src="" class="img-responsive carimage" id="1" alt=""></center>
                      </div>
                   </div>
                </div>
@@ -46,127 +49,12 @@
                   <div class="car-list col-sm-12 carDetailsDiv">
                      <hr/>
                      <div class="car-list-item row container" id="Arun Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Arun Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2011</div>
+                        <div class="list-group" >
+                           <div class="col-xs-12">
+                              <h5 class="text-success">Sorry!!! No cars Available for this date...</h5>
                            </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>10/km</h5>
-                              <div>250 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="MK Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">MK Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2011</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>10/km</h5>
-                              <div>275 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="Ravi Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Ravi Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2011</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>10/km</h5>
-                              <div>300 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="RSR Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">RSR Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2013</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>11/km</h5>
-                              <div>300 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="VR Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">VR Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2015</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>13/km</h5>
-                              <div>300 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="Vinayaka Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Vinayaka Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2012</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>13/km</h5>
-                              <div>300 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container" id="Madhu Travels">
-                        <div class="list-group col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Madhu Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2012</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>13/km</h5>
-                              <div>300 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Kumar Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2012</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>14/km</h5>
-                              <div>250 km/day</div>
-                           </div>
-                        </div>
-                     </div>
-                     <hr/>
-                     <div class="car-list-item row container">
-                        <div class="list-group" class="col-xs-12">
-                           <div class="col-xs-6">
-                              <h5 class="text-success">Arun Travels</h5>
-                              <div>3+1 Seats</div>
-                              <div>2015</div>
-                           </div>
-                           <div class="col-xs-6">
-                              <h5 class="text-info"><i class="fa fa-inr" style="font-size:15px"></i>14/km</h5>
-                              <div>250 km/day</div>
+                           <div class="col-xs-12">
+                              <h5 class="text-info">Please try changing your dates or Car!!!</h5>
                            </div>
                         </div>
                      </div>
@@ -174,9 +62,7 @@
                </div>
             </div>
          </div>
-         </div>
-         </div>
-      </section>
+      </section></div>
       <!-- Footer -->
       <footer class="text-center websiteView">
          <div class="footer-above">
@@ -233,22 +119,8 @@
             </div>
          </div>
       </footer>
-      <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-      <div class="scroll-top page-scroll visible-xs visible-sm">
-         <a class="btn btn-primary" href="#page-top">
-         <span class="glyphicon glyphicon-chevron-up">
-         </a>
-      </div>
       <script src="../js/general/jquery.js"></script>
       <script src="../js/general/httputil.js"></script>
-      <script src="../js/general/bootstrap.min.js"></script>
-      <script src="../js/general/jquery.easing.min.js"></script>
-      <script src="../js/general/classie.js"></script>
-      <script src="../js/general/cbpAnimatedHeader.js"></script>
-      <script src="../js/general/jqBootstrapValidation.js"></script>
-      <script src="../js/general/contact_me.js"></script>
-      <script src="../js/general/freelancer.js"></script>
-      <script src="../js/general/jquery-ui.js"></script>
       <script src="../js/rentCars/carDetails.js"> </script>
    </body>
 </html>
