--- a/applications/ws/prod/client/tab/mobile/rentCars/index.html
+++ b/applications/ws/prod/client/tab/mobile/rentCars/index.html
@@ -213,5 +213,14 @@
 
 	function onSignIn(googleUser) {}
       </script>
+      <script async
+		src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- TabCars -->
+	<ins class="adsbygoogle" style="display: block"
+		data-ad-client="ca-pub-8550053866997322" data-ad-slot="6134903491"
+		data-ad-format="auto"></ins>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
    </body>
 </html>
